# ClaudeClockwork

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  MEMORY.md  MODEL_POLICY.md  NEW_MVPS.md  QUALITY_TRACKING.md  README.md  ROADMAP.md  Task.md  VERIFY.md  VERSION  pyproject.toml
.claude/: ARCHITECTURE.md  CHANGELOG.md  DEPLOY.md  INDEX.md  MEMORY.md  MODEL_POLICY.md  OODLE.md  QUALITY_TRACKING.md  ROADMAP.md  SYSTEM.md  VERSION  collaboration.md  settings.local.json  skills.md
.claude-development/: Clockwork_MVP_Chain.md  MVP_RULE.md  README.md
.claude-innovation/: README.md
.claude-performance/: README.md
.project/: ARCHITECTURE.md  MEMORY.md  MODEL_POLICY.md  QUALITY_TRACKING.md  ROADMAP.md
.report/: README.md
Docs/: INDEX.md  adapter_batch_reports.md  adapter_elimination_plan.md  autopilot_policy.md  capability_policy_localai.md  cas.md  cas_eviction.md  chaos_suite.md  cli_contract.md  cost_model.md  dashboards.md  deprecations.md  drift_register.md  drilldowns.md  eval_golden_suite_format.md  eval_scoreboards.md  evidence_bundle_spec.md  external_runner_sandbox.md  failure_taxonomy.md  feedback.md  first_run.md  full_skill_system_readme.md  green_criteria.md  green_run_certificate.md  green_run_certificate_mvp18_43.md  import_project.md  install.md  kb_retrieval.md  kb_scope.md  legacy_adapter_deprecation.md  module_boundaries.md  multi_project_graph_contract.md  orchestrator_mode.md  phase62_version_drift_fix_report.md  phase72_completion_report.md  phase73_completion_report.md  plugin_certification_tiers.md  plugin_compatibility.md  plugin_registry.md  plugin_security_policy.md  (+30 more)
claudeclockwork/: __init__.py  bridge.py  cli.py  runtime.py
configs/: permissions.json
mvps/: MVP_Phase0_FoundationCleanup.md  MVP_Phase10_Compaction.md  MVP_Phase11_LegacyDocMigration.md  MVP_Phase12_DuplicateElimination.md  MVP_Phase13_GreenfieldUpdate.md  MVP_Phase14_NativeSkills.md  MVP_Phase15_ObsoleteDataPrune.md  MVP_Phase15_SkillDiscovery.md  (+76 more)
(+3437 files in other folders)
