[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudeclockwork"
version = "0.1.0"
description = "Meta-governance and tooling layer for multi-agent Claude/Ollama orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Clockwork" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
clockwork = "claudeclockwork.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claudeclockwork*"]

[tool.pytest.ini_options]
markers = [
    "unit: fast unit tests (no I/O), run on every PR",
    "integration: multi-component tests, run on PR or nightly",
    "e2e: end-to-end pipeline/CLI, run on nightly",
]
testpaths = ["tests"]
